add user activation route
